--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     
     <div class="sidebar">
-        <a href="ravens.html" >
+        <a href="index.html" >
             <div class="sidebar-link">
                 <img src="ravens_icons/c/welcome.svg">
                 <div>ÚVOD</div>
